# Audio_Analysis

./: .gitignore  Dockerfile  communication_report.md  fastapi-development-standards.md  feature_extractor.py  main.py  mongo_pipeline.py  pyproject.toml  requirements.txt  run_tests.sh
ANALYSIS/: analysis.ipynb  analysis_report.md  analysis_test_v2.ipynb  analysis_test_v3.ipynb
TEST/: academic_violation_test.csv  test_proctoring.py  test_runner_v2.py  test_runner_v3.py  testing.py  testing_script.py
TEST_Proctoring/: Persistent BFSI - Completed.csv  output.csv  output_audio.csv  run_audio_batch.py  run_proctoring_batch.py
backend/: requirements.txt  testing_grammer.py
reports/: bias.md  comms_axis.md  compliance.md  evaluation.md  evaluation_schema.md
result_cache/: 00e921ddb7fba858.json  083506c5f615c0b9.json  0bbfa6845da0e6db.json  23523a88234b4c79.json  2540cf1bd618d6f3.json  2981469423ab4d6f.json  3ab6f68334a24174.json  43e929a98113feda.json  5cfa30de8ad3b3f3.json  66156000b0139f7c.json  74f8b9bd4c6664e7.json  76be2e52c3a9281b.json  76e804ff325007ea.json  80557bc1f4a1dbde.json  837cad1ad5f9966e.json  8711d7cfcf5e14dd.json  95efc4d784a8cd4a.json  9a7dad4712de9896.json  9e56689d4cbd4be7.json  9fbacc78448cbd1c.json  9fe3425deb788787.json  abe9879aa29a030a.json  b808576dbf307b07.json  c2337a2f580735e8.json  c25a99fd7b438843.json
tests/: test_api.py
v1/: index.html  mongo_pipeline_new.py
v2/: Communication_Style_Evaluation_Framework.md  Dockerfile  Zeko_Unified_Communication_Framework_v1.md  __init__.py  config.py  index.html  main.py  models.py  (+1 more)
(+75 files in other folders)
